[package]
name = "os"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
# panic = "abort" # disable stack unwinding on panic, breaks tests, so commenting it out temporarily

# the profile used for `cargo build --release`
[profile.release]
panic = "abort" # disable stack unwinding on panic

[dependencies]
bootloader = "0.9.23"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
spin = "0.9.8"
uart_16550 = "0.3.0"
x86_64 = "0.14.11"

[package.metadata.bootimage]
test-args = [
  "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", # defining a special QEMU device, along with its IO Ports that allows to shut down QEMU from guest OS
  "-serial", "stdio",                                  # redirecting serial output to host's stdio 
  "-display", "none",
] 
test-success-exit-code = 33         # (0x10 << 1) | 1 defining what exit code QEMU should interpret as a success (for tests)
